--- a/roles/fedora_workstation/defaults/main.yml
+++ b/roles/fedora_workstation/defaults/main.yml
@@ -5,6 +5,7 @@ azure_data_studio: no
 google_chrome: no
 google_earth: no
 ms_teams: no
+powershell: no
 vscode: no
 nvidia: false
 nvidia_container: false
