--- a/host_vars/vmwstest.yml
+++ b/host_vars/vmwstest.yml
@@ -3,6 +3,7 @@ hostname: vmwstest
 
 update_packages: yes
 android_studio: yes
+aws_cli: yes
 azure_cli: yes
 azure_data_studio: no
 google_chrome: yes
