start to support local init for mawus development

--- a/host_vars/lvmtest.yml
+++ b/host_vars/lvmtest.yml
@@ -11,6 +11,7 @@ ddclient_config:
     groups:
     subuid: 200000-265536
     subgid: 200000-265536
+    enable_linger: yes
   namecheap_password: "{{ vault_namecheap_password }}"
 
 # mikeandwan.us
@@ -21,6 +22,7 @@ mawus_config:
     password: "{{ vault_password_lvmtest_svc_www_maw }}"
     subuid: 300000-365536
     subgid: 300000-365536
+    enable_linger: yes
 
 # subuid / subgid hopefully coming to user module eventually
 # https://github.com/ansible/ansible/issues/68199
