--- a/roles/mikeandwan_us/tasks/maw_host_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_host_init.yml
@@ -1,13 +1,10 @@
 ---
-# assets
-# todo: copy files for prod
 - name: ensure asset directories exist
   become: yes
   ansible.builtin.file:
     path: "{{ item }}"
-    recurse: yes
+    #recurse: yes
     state: directory
-  loop:
-    - "{{ host_assets_dir }}"
-    - "{{ host_assets_dir_images }}"
-    - "{{ host_assets_dir_movies }}"
+  loop: "{{ asset_dirs }}"
+
+# todo: copy files for prod
