--- a/host_vars/vmtest.yml
+++ b/host_vars/vmtest.yml
@@ -12,6 +12,7 @@ ddclient_config:
     groups:
     subuid: 200000-265536
     subgid: 200000-265536
+    enable_linger: yes
   namecheap_password: "{{ vault_namecheap_password }}"
 
 # mikeandwan.us
@@ -22,6 +23,7 @@ mawus_config:
     password: "{{ vault_password_vmtest_svc_www_maw }}"
     subuid: 300000-365536
     subgid: 300000-365536
+    enable_linger: yes
   is_prod: no
   sql_username: svc_www_maw
   sql_password: "{{ vault_password_vmtest_sql_svc_www_maw }}"
