--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -2,45 +2,49 @@
 - name: Include maw_hostnames.yml
   ansible.builtin.include_tasks: maw_hostnames.yml
   loop:
-    - mikeandwan.us
-    - api.mikeandwan.us
-    - auth.mikeandwan.us
-    - files.mikeandwan.us
-    - photos.mikeandwan.us
-    - www.mikeandwan.us
+    - "{{ mawus_config.fqdn_naked }}"
+    - "{{ mawus_config.fqdn_api }}"
+    - "{{ mawus_config.fqdn_auth }}"
+    - "{{ mawus_config.fqdn_files }}"
+    - "{{ mawus_config.fqdn_photos }}"
+    - "{{ mawus_config.fqdn_www }}"
 
 - name: Include port_mapping.yml
   ansible.builtin.include_tasks: port_mapping.yml
+  when: "{{ mawus_config.allow_low_ports }}"
 
 - name: Initialize host
   ansible.builtin.include_tasks: maw_host_init.yml
+  vars:
+    asset_dirs:
+      - "{{ mawus_config.asset_dir_images }}"
+      - "{{ mawus_config.asset_dir_movies }}"
 
 - name: "Temporarily set SSH username to {{ mawus_svc_account }}"
   ansible.builtin.set_fact:
     orig_ansible_user: "{{ ansible_user }}"
     ansible_user: "{{ mawus_svc_account }}"
-    mawus_podname: maw-pod
-    redis_version: 6
-    postgres_version: 14
-    solr_version: 8
-    env_file_dir: "/home/{{ mawus_svc_account }}/maw_env"
+  when: mawus_config.env != 'local'
   changed_when: false
   delegate_to: localhost
 
 - name: Include maw_admin_scripts.yml
   ansible.builtin.include_tasks: maw_admin_scripts.yml
+  when: mawus_config.env != 'local'
 
 - name: Include maw_env_files.yml
   ansible.builtin.include_tasks: maw_env_files.yml
 
 - name: Include maw_systemd_scripts.yml
   ansible.builtin.include_tasks: maw_systemd_scripts.yml
+  when: mawus_config.env == 'prod'
 
 - name: Include maw_volumes.yml
   ansible.builtin.include_tasks: maw_volumes.yml
 
 - name: Include maw_maintenance.yml
   ansible.builtin.include_tasks: maw_maintenance.yml
+  when: mawus_config.env == 'prod'
 
 - name: Initialize environment
   ansible.builtin.include_tasks: maw_init.yml
@@ -51,5 +55,6 @@
 - name: "Reset SSH username to {{ orig_ansible_user }}"
   ansible.builtin.set_fact:
     ansible_user: "{{ orig_ansible_user }}"
+  when: mawus_config.env != 'local'
   changed_when: false
   delegate_to: localhost
