--- a/roles/mikeandwan_us/tasks/maw_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_init.yml
@@ -1,5 +1,14 @@
 ---
-# certs
+- name: set the volume source (local / non-container)
+  ansible.builtin.set_fact:
+    cert_vol: "{{ mawus_config.certs_dir }}"
+  when: mawus_config.env == 'local'
+
+- name: set the volume source (not local - container)
+  ansible.builtin.set_fact:
+    cert_vol: "{{ maw_cert_volume.volume.Name }}"
+  when: mawus_config.env != 'local'
+
 # todo: evaluate dev/prod support
 - name: initialize local certs
   containers.podman.podman_container:
@@ -10,7 +19,7 @@
     rm: yes
     tty: yes
     volume:
-      - "{{ maw_cert_volume.volume.Name }}:/certs:rw,z"
+      - "{{ cert_vol }}:/certs:rw,z"
 
 - name: wait for cert initialization to complete
   containers.podman.podman_container_info:
