--- a/vars_mawus_local.yml
+++ b/vars_mawus_local.yml
@@ -66,7 +66,7 @@ mawus_config:
     #- 443:443
 
   gateway_volumes:
-    #- "{{ maw_cert_volume.volume.Name }}:/certs:ro,z"
+    #- "{{ maw_cert_volume.volume.Name }}:/maw-certs:ro,z"
     #- "{{ host_assets_dir }}:/assets:ro"
     #- "{{ certbot_validation_volume.volume.Name }}:/var/www/certbot:ro,z"
     #- "{{ certbot_certs_volume.volume.Name }}:/etc/letsencrypt:ro,z"
