make sure the local upload directory is created for local dev site

--- a/roles/mikeandwan_us/tasks/maw_host_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_host_init.yml
@@ -7,4 +7,10 @@
     state: directory
   loop: "{{ asset_dirs }}"
 
+- name: ensure maw-uploads directory exists
+  ansible.builtin.file:
+    path: "{{ mawus_config.upload_dir }}"
+    state: directory
+  when: mawus_config.env == 'local'
+
 # todo: copy files for prod
