--- a/roles/mikeandwan_us/tasks/wait_for_container_to_exit.yml
+++ b/roles/mikeandwan_us/tasks/wait_for_container_to_exit.yml
@@ -1,4 +1,4 @@
-- name: wait for container to exit
+- name: wait for container to exit (rm should be specified when starting container)
   containers.podman.podman_container_info:
     name: "{{ container_name }}"
   register: wait_container_info
